--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <% for (var css in htmlWebpackPlugin.files.css) { %>
+    <!-- <% for (var css in htmlWebpackPlugin.files.css) { %>
     <link href="<%=htmlWebpackPlugin.files.css[css] %>" rel="stylesheet" />
-    <% } %>
+    <% } %> -->
   </head>
   <body>
     <div id="app"></div>
-    <% for (var chunk in htmlWebpackPlugin.files.js) { %>
+    <!-- <% for (var chunk in htmlWebpackPlugin.files.js) { %>
     <script type="text/javascript" src="<%=htmlWebpackPlugin.files.js[chunk] %>"></script>
-    <% } %>
+    <% } %> -->
   </body>
 </html>
